.k8s/minikube-host.service.yml
apiVersion: v1
kind: Service
metadata:
  name: minikube-host-service
spec:
    type: ExternalName
    externalName: host.minikube.internal
