.k8s/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: campus-namespace
spec:
  selector:
    app: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: campus
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - name: "backend"
      match:
      - uri:
          prefix: /api
      route:
        - destination:
            host: gateway-api-service
            port:
              number: 8000
      timeout: 5ms
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5ms
    - name: "frontend"
      route:
        - destination:
            host: frontend-service
            port:
              number: 80
