.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campus-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      rewrite ^/api/learn(.*)$ /api$1 break;
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/learn
            pathType: Prefix
            backend:
              service:
                name: learn-api-service
                port:
                  number: 80
